--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@gsap/react": "^2.1.2",
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "@iconify/react": "^6.0.0",
     "@tailwindcss/vite": "^4.1.10",
     "animejs": "^4.0.2",
     "axios": "^1.10.0",
